--- a/marketing/itch.html
+++ b/marketing/itch.html
@@ -2,4 +2,4 @@
 <p>Protect the sea from the endless bubble menace!</p>
 <p>- After setup, you will have&nbsp;60 seconds to pop as many bubbles as possible</p>
 <p>- Drag and drop sea-creature 'towers' &nbsp;onto pegs</p>
-<p> - Popping bubbles earns cash to purchase more towers<br></p>
+<p> - Popping bubbles earns cash to purchase more towers<br></p><p>Created for the <a href="https://itch.io/jam/one-minute-game-jam-7" target="_blank">One Minute Game Jam #7</a>&nbsp;</p><p>Created by:</p><p>- Brad Larson UI/UX Game Design / Programming<br>-&nbsp;<a href="https://mjt.dev" target="_blank">Matt Taylor</a>&nbsp;Programming &nbsp;Engine / Game</p><p>Thanks to the following for assets used in the game:</p><p>-&nbsp;SFX <a href="http://ZapSplat.com" target="_blank">ZapSplat.com</a></p><p>- SFX <a href="https://pixabay.com/" target="_blank">Pixabay</a></p><p>- Graphics <a href="https://www.freepik.com/" class="anchor-1MIwyf anchorUnderlineOnHover-2qPutX" title="https://www.freepik.com/" rel="noreferrer noopener" target="_blank" role="button" tabindex="0">https://www.freepik.com</a></p>
